--- a/ch1/ex14_n/ex14_n.vcproj
+++ b/ch1/ex14_n/ex14_n.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="ex6"
-	ProjectGUID="{BB675C9D-AE26-4AD3-8285-4DE41B677179}"
-	RootNamespace="ex6"
+	Name="ex14_n"
+	ProjectGUID="{C2FA56AE-0ED1-44EB-A85D-47A0AD257A38}"
+	RootNamespace="ex14_n"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -170,6 +170,10 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\ex14.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
